--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,14 +137,23 @@ elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
   set(EXTRA_Fortran_FLAGS "")
 endif()
 
+# Logic for showing and handling warnings
 if(ENABLE_ALL_WARNINGS)
+  # GCC, Clang, and Intel seem to accept these
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
     if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
+      # ifort doesn't like -Wall
       set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Wall")
     else()
+      # ifort always reports some diagnostics we don't necessarily care about
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -diag-disable:11074,11076")
     endif()
+    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 7.0)
+      # Avoid notes about -faligned-new with GCC > 7
+      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -faligned-new")
+    endif()
 endif()
+# Make warnings errors
 if(ENABLE_WERROR)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Werror")
