Use ADIOS2 BP format for tests output if output is later used as an input
To test that all the necessary information is saved correcly in the BP file, we modified
tests that generate an output that is used as an input in another test. This allows us
to ensure that the saved information is enough to run the second test successfully.

--- a/reg_tests/test_files/ablUnstableEdge/ablUnstableEdge_rst.i.in
+++ b/reg_tests/test_files/ablUnstableEdge/ablUnstableEdge_rst.i.in
@@ -207,7 +207,8 @@ realms:
        - viscosity
 
   - name: ioRealm
-    mesh: abl_io_results.e
+    mesh: abl_io_results.@test_mesh_db_extension@
+    mesh_db_type: @test_mesh_db_type@
     type: external_field_provider
 
     field_registration:
