--- a/reg_tests/test_files/ablUnstableEdge/ablUnstableEdge.i.in
+++ b/reg_tests/test_files/ablUnstableEdge/ablUnstableEdge.i.in
@@ -244,7 +244,8 @@ realms:
           field_type: node_rank
 
     output:
-      output_data_base_name: abl_io_results.e
+      output_data_base_name: abl_io_results.@test_mesh_db_extension@
+      output_mesh_db_type: @test_mesh_db_type@
       output_frequency: 1
       output_node_set: no
       output_variables:
