--- a/reg_tests/test_files/ductWedge/ductWedge.i.in
+++ b/reg_tests/test_files/ductWedge/ductWedge.i.in
@@ -106,7 +106,8 @@ realms:
             pressure: element
           
     output:
-      output_data_base_name: ductWedge.e
+      output_data_base_name: ductWedge.@test_mesh_db_extension@
+      output_mesh_db_type: @test_mesh_db_type@
       output_frequency: 2 
       output_node_set: no 
       output_variables:
