--- a/reg_tests/test_files/ductWedge/ductWedge_Input.i.in
+++ b/reg_tests/test_files/ductWedge/ductWedge_Input.i.in
@@ -128,7 +128,8 @@ realms:
        - turbulent_viscosity
 
   - name: ioRealm
-    mesh:  ductWedge.e
+    mesh:  ductWedge.@test_mesh_db_extension@
+    mesh_db_type: @test_mesh_db_type@
     type: initialization
 
     field_registration:
