--- a/reg_tests/test_files/elemBackStepLRSST/elemBackStepLRSST.i.in
+++ b/reg_tests/test_files/elemBackStepLRSST/elemBackStepLRSST.i.in
@@ -178,7 +178,8 @@ realms:
             minimum_distance_to_wall: ndtw
 
     output:
-      output_data_base_name: elemBackStepLRSST.e
+      output_data_base_name: elemBackStepLRSST.@test_mesh_db_extension@
+      output_mesh_db_type: @test_mesh_db_type@
       output_frequency: 5
       output_node_set: no 
       output_variables:
