--- a/unit_tests/kernels/CMakeLists.txt
+++ b/unit_tests/kernels/CMakeLists.txt
@@ -15,6 +15,7 @@ add_sources(GlobalUnitSourceList
    UnitTestMomentumMassElem.C
    UnitTestMomentumNSOElem.C
    UnitTestMomentumNSOKeElem.C
+   UnitTestMomentumUpwAdvDiffElem.C
    UnitTestSSTSrcElem.C
    UnitTestScalarAdvDiffElem.C
    UnitTestScalarMassElem.C
