--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ set(CMAKE_PREFIX_PATH ${Trilinos_DIR} ${CMAKE_PREFIX_PATH})
 set(CMAKE_PREFIX_PATH ${Trilinos_PATH} ${CMAKE_PREFIX_PATH})
 find_package(Trilinos REQUIRED)
 if(Trilinos_FOUND)
-  message("-- Found Trilinos = ${Trilinos_DIR}")
+  message(STATUS "Found Trilinos = ${Trilinos_DIR}")
 endif()
 include_directories(SYSTEM ${Trilinos_INCLUDE_DIRS})
 include_directories(SYSTEM ${Trilinos_TPL_INCLUDE_DIRS})
@@ -70,7 +70,7 @@ else()
   endif()
 endif()
 if(YAML-CPP_FOUND)
-  message("-- Found YAML-CPP = ${YAML_DIR}")
+  message(STATUS "Found YAML-CPP = ${YAML_DIR}")
 else()
   message(FATAL_ERROR "YAML-CPP NOT FOUND")
 endif()
@@ -84,7 +84,7 @@ if(ENABLE_FFTW)
   set(CMAKE_PREFIX_PATH ${FFTW_DIR} ${CMAKE_PREFIX_PATH})
   find_package(FFTW QUIET REQUIRED)
   if(FFTW_FOUND)
-    message("-- Found FFTW = ${FFTW_DIR}")
+    message(STATUS "Found FFTW = ${FFTW_DIR}")
   endif()
   include_directories(${FFTW_INCLUDE_DIRS})
   add_definitions("-DNALU_USES_FFTW")
@@ -95,7 +95,7 @@ if(ENABLE_HYPRE)
   set(CMAKE_PREFIX_PATH ${HYPRE_DIR} ${CMAKE_PREFIX_PATH})
   find_package(HYPRE QUIET REQUIRED)
   if(HYPRE_FOUND)
-    message("-- Found HYPRE = ${HYPRE_DIR}")
+    message(STATUS "Found HYPRE = ${HYPRE_DIR}")
   endif()
   include_directories(SYSTEM ${HYPRE_INCLUDE_DIRS})
   add_definitions("-DNALU_USES_HYPRE")
@@ -106,7 +106,7 @@ if(ENABLE_OPENFAST)
   set(CMAKE_PREFIX_PATH ${OpenFAST_DIR} ${CMAKE_PREFIX_PATH})
   find_package(OpenFAST REQUIRED)
   if(OpenFAST_FOUND)
-    message("-- Found OpenFAST = ${OpenFAST_DIR}")
+    message(STATUS "Found OpenFAST = ${OpenFAST_DIR}")
   endif()
   include_directories(${OpenFAST_INCLUDE_DIRS})
   add_definitions("-DNALU_USES_OPENFAST")
@@ -117,7 +117,7 @@ if(ENABLE_TIOGA)
   set(CMAKE_PREFIX_PATH ${TIOGA_DIR} ${CMAKE_PREFIX_PATH})
   find_package(TIOGA REQUIRED)
   if(TIOGA_FOUND)
-    message("-- Found TIOGA = ${TIOGA_DIR}")
+    message(STATUS "Found TIOGA = ${TIOGA_DIR}")
   endif()
   include_directories(${TIOGA_INCLUDE_DIRS})
   add_definitions("-DNALU_USES_TIOGA")
@@ -128,8 +128,8 @@ endif()
 
 ########################### NALU #####################################
 # Add any extra flags based on compiler and/or OS
-message("-- CMAKE_SYSTEM_NAME = ${CMAKE_SYSTEM_NAME}")
-message("-- CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
+message(STATUS "CMAKE_SYSTEM_NAME = ${CMAKE_SYSTEM_NAME}")
+message(STATUS "CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
   set(EXTRA_CXX_FLAGS "")
   set(EXTRA_Fortran_FLAGS "")
@@ -201,7 +201,7 @@ if(ENABLE_HYPRE)
   if (NALU_HYPRE_COGMRES)
     add_definitions(-DHYPRE_COGMRES)
   else()
-    message("-- Disabling HYPRE CO-GMRES interface")
+    message(STATUS "Disabling HYPRE CO-GMRES interface")
   endif()
 endif()
 
@@ -248,12 +248,9 @@ function(add_sources target_list)
    endforeach()
 endfunction(add_sources)
 add_subdirectory(src)
-add_subdirectory(include)
 add_subdirectory(unit_tests)
 get_property(NALU_SOURCES GLOBAL PROPERTY GlobalSourceList)
-get_property(NALU_HEADERS GLOBAL PROPERTY GlobalHeaderList)
 get_property(NALU_UNIT_SOURCES GLOBAL PROPERTY GlobalUnitSourceList)
-get_property(NALU_UNIT_HEADERS GLOBAL PROPERTY GlobalUnitHeaderList)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${CMAKE_BINARY_DIR}/include)
@@ -278,7 +275,7 @@ if(ENABLE_TIOGA)
   target_link_libraries(nalu ${TIOGA_LIBRARIES})
 endif()
 
-message("-- CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
+message(STATUS "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
 
 set(nalu_ex_name "naluX")
 add_executable(${nalu_ex_name} nalu.C)
