--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_sources(GlobalUnitSourceList
   UnitTestMomentumBodyForceNode.C
   UnitTestMomentumBoussinesqNode.C
+  UnitTestMomentumMassBDFNodeKernel.C
   UnitTestScalarMassBDFNodeKernel.C
 )
