--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -3,4 +3,5 @@ add_sources(GlobalSourceList
   MomentumBoussinesqNodeKernel.C
   MomentumActuatorNodeKernel.C
   ScalarMassBDFNodeKernel.C
+  TurbKineticEnergyRodiNodeKernel.C
   )
