New GPU kernel Turb Kinetic Energy Rodi
Second try. Since the test is over one
element change the old non-GPU test to
be over one element so the reference
solution can be the same between the
two.

--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -6,5 +6,6 @@ add_sources(GlobalSourceList
   MomentumActuatorNodeKernel.C
   MomentumCoriolisNodeKernel.C
   ScalarMassBDFNodeKernel.C
+  TurbKineticEnergyRodiNodeKernel.C
   WallDistNodeKernel.C
   )
