--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -6,5 +6,6 @@ add_sources(GlobalUnitSourceList
   UnitTestMomentumCoriolisNode.C
   UnitTestScalarMassBDFNodeKernel.C
   UnitTestMomentumActuatorNodeKernel.C
+  UnitTestTurbKineticEnergyRodiNodeKernel.C
   UnitTestWallDistNode.C
 )
