--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_sources(GlobalSourceList
+  # Edge kernels
   ContinuityEdgeSolverAlg.C
   MomentumEdgeSolverAlg.C
   ScalarEdgeSolverAlg.C
   WallDistEdgeSolverAlg.C
+
+  # Face/edge BC kernels
+  MomentumSymmetryEdgeKernel.C
   )
