NGP implementation of Edge BC algorithms
Use MomentumSymmetry BC as an example to demonstrate conversion of edge BC
algorithms.

Add necessary KOKKOS_FUNCTION decorators to MasterElement methods.

--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -1,5 +1,9 @@
 add_sources(GlobalSourceList
+  # Edge kernels
   ContinuityEdgeSolverAlg.C
   MomentumEdgeSolverAlg.C
   WallDistEdgeSolverAlg.C
+
+  # Face/edge BC kernels
+  MomentumSymmetryEdgeKernel.C
   )
