--- a/unit_tests/edge_kernels/CMakeLists.txt
+++ b/unit_tests/edge_kernels/CMakeLists.txt
@@ -1,5 +1,9 @@
 add_sources(GlobalUnitSourceList
+  # Edge interior kernels
   UnitTestContinuityAdvEdge.C
   UnitTestMomentumAdvDiffEdge.C
   UnitTestWallDistEdgeSolver.C
+
+  # Face/elem edge BC kernels
+  UnitTestMomentumSymmetryEdge.C
   )
