--- a/reg_tests/hypre_settings/hypre_blade_resolved.yaml
+++ b/reg_tests/hypre_settings/hypre_blade_resolved.yaml
@@ -1,6 +1,6 @@
 hypre_simple_precon:
   bamg_max_levels: 1
-  bamg_relax_type: 11 # Use 11 for Hypre master or v2.21 and later, 8 for earlier
+  bamg_relax_type: 12 # Use 11 for Hypre master or v2.21 and later, 8 for earlier
   bamg_num_sweeps: 2
   bamg_relax_order: 0
 
@@ -9,12 +9,15 @@ hypre_elliptic:
   bamg_coarsen_type: 8 # 10 for CPUs (HMIS). For GPUs, use 8 (PMIS)
   bamg_interp_type: 6
   bamg_relax_type: 11 # Use 11 for Hypre master or v2.21 and later, 8 for earlier
-  bamg_num_sweeps: 2
+  #bamg_num_sweeps: 2
+  bamg_num_up_sweeps: 1
+  bamg_num_down_sweeps: 2
+  bamg_num_coarse_sweeps: 1
   bamg_cycle_type: 1
   bamg_relax_order: 0
   bamg_trunc_factor: 0.1
   bamg_agg_num_levels: 2
-  bamg_agg_interp_type: 5 # for 4 CPUs. For GPUs, use 5 (less communication) or 7 (better convergence)
+  bamg_agg_interp_type: 7 # use 4 for CPUs. For GPUs, use 5 (less communication) or 7 (better convergence)
   bamg_agg_pmax_elmts: 3
   bamg_pmax_elmts: 3
   bamg_strong_threshold: 0.25
