--- a/reg_tests/test_files/ablNeutralNGPHypreSegregated/ablNeutralNGPHypreSegregated.yaml
+++ b/reg_tests/test_files/ablNeutralNGPHypreSegregated/ablNeutralNGPHypreSegregated.yaml
@@ -19,6 +19,8 @@ linear_solvers:
     write_matrix_files: no
     reuse_linear_system: yes
     recompute_preconditioner_frequency: 100
+    simple_hypre_matrix_assemble: no
+    dump_hypre_matrix_stats: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
@@ -36,6 +38,8 @@ linear_solvers:
     write_matrix_files: no
     reuse_linear_system: yes
     recompute_preconditioner_frequency: 100
+    simple_hypre_matrix_assemble: no
+    dump_hypre_matrix_stats: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
@@ -53,6 +57,8 @@ linear_solvers:
     write_matrix_files: no
     reuse_linear_system: yes
     recompute_preconditioner_frequency: 100
+    simple_hypre_matrix_assemble: no
+    dump_hypre_matrix_stats: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
