--- a/reg_tests/test_files/oversetRotCylNGPHypre/oversetRotCylNGPHypre.yaml
+++ b/reg_tests/test_files/oversetRotCylNGPHypre/oversetRotCylNGPHypre.yaml
@@ -17,6 +17,8 @@ linear_solvers:
     output_level: 0
     segregated_solver: yes
     write_matrix_files: no
+    simple_hypre_matrix_assemble: no
+    dump_hypre_matrix_stats: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
@@ -32,6 +34,8 @@ linear_solvers:
     kspace: 75
     output_level: 0
     write_matrix_files: no
+    simple_hypre_matrix_assemble: no
+    dump_hypre_matrix_stats: no
 
     # File containing hypre specific configuration options
     hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
