--- a/reg_tests/test_files/oversetRotCylinder/oversetRotCylinder_rst.yaml
+++ b/reg_tests/test_files/oversetRotCylinder/oversetRotCylinder_rst.yaml
@@ -27,9 +27,8 @@ linear_solvers:
 realms:
 
   - name: realm_1
-    mesh: ../../mesh/oversetCylinder.g
+    mesh: rst/oversetCylinder.rst
     use_edges: yes
-    automatic_decomposition_type: rcb
     activate_aura: true
 
     equation_systems:
@@ -161,7 +160,7 @@ realms:
 
       - type: surface
         physics: surface_force_and_moment
-        output_file_name: oversetRotCylinder.dat
+        output_file_name: oversetRotCylinder_rst.dat
         frequency: 1
         parameters: [0,0]
         target_name: wall
@@ -176,12 +175,12 @@ realms:
           compute_vorticity: yes
 
     restart:
-      restart_data_base_name: rst/oversetRotCylinder.rst
-      restart_frequency: 15
-      restart_start: 15
+      restart_data_base_name: rst/oversetRotCylinder_rst.rst
+      restart_frequency: 100
+      restart_start: 100
 
     output:
-      output_data_base_name: out/oversetRotCylinder.exo
+      output_data_base_name: out/oversetRotCylinder_rst.exo
       output_frequency: 1000
       output_node_set: no
       output_variables:
@@ -199,7 +198,7 @@ Time_Integrators:
   - StandardTimeIntegrator:
       name: ti_1
       start_time: 0
-      termination_step_count: 15
+      termination_step_count: 30
       time_step: 0.003
       time_stepping_type: fixed
       time_step_count: 0
