--- a/reg_tests/CMakeLists.txt
+++ b/reg_tests/CMakeLists.txt
@@ -15,12 +15,29 @@ endif()
 set(NALU_WIND_REFERENCE_GOLDS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test_files" CACHE PATH
   "Custom directory for checking gold norms")
 
-if (NOT ${NALU_WIND_REFERENCE_GOLDS_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
-  set(NALU_WIND_REFERENCE_GOLDS_DIR "${NALU_WIND_REFERENCE_GOLDS_DIR}/${CMAKE_SYSTEM_NAME}/${CMAKE_CXX_COMPILER_ID}/${CMAKE_CXX_COMPILER_VERSION}")
-  message(STATUS "Setting custom path for reference golds: ${NALU_WIND_REFERENCE_GOLDS_DIR}")
-  set(TEST_ABS_TOL "1.0e-15")
-  set(TEST_REL_TOL "1.0e-12")
+if (NOT "${NALU_WIND_REFERENCE_GOLDS_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}/test_files")
+  if(EXISTS ${NALU_WIND_REFERENCE_GOLDS_DIR})
+    set(NALU_WIND_REFERENCE_GOLDS_DIR "${NALU_WIND_REFERENCE_GOLDS_DIR}/${CMAKE_SYSTEM_NAME}/${CMAKE_CXX_COMPILER_ID}/${CMAKE_CXX_COMPILER_VERSION}")
+    message(STATUS "Reference gold files will be expected here: ${NALU_WIND_REFERENCE_GOLDS_DIR}")
+  else()
+    message(FATAL_ERROR "Reference gold files path does not exist: ${NALU_WIND_REFERENCE_GOLDS_DIR}")
+  endif()
+  if("${TEST_ABS_TOL}" STREQUAL "")
+    set(TEST_ABS_TOL "1.0e-15")
+  endif()
+  if("${TEST_REL_TOL}" STREQUAL "")
+    set(TEST_REL_TOL "1.0e-12")
+  endif()
 endif()
+
+if("${TEST_ABS_TOL}" STREQUAL "")
+  set(TEST_ABS_TOL "1000.0") # Useless default
+endif()
+
+if("${TEST_REL_TOL}" STREQUAL "")
+  set(TEST_REL_TOL "1000.0") # Useless default
+endif()
+message(STATUS "Using test tolerance: abs = ${TEST_ABS_TOL}, rel = ${TEST_REL_TOL}")
 
 if(NALU_WIND_SAVE_GOLDS)
   if("${NALU_WIND_SAVED_GOLDS_DIR}" STREQUAL "")
@@ -34,36 +51,6 @@ if(NALU_WIND_SAVE_GOLDS)
     endif()
   endif()
 endif()
-
-# Set ABS_TOLERANCE for testing
-if(NOT ${TEST_ABS_TOL} STREQUAL "")
-  set(ABS_TOLERANCE ${TEST_ABS_TOL}) # User defined
-else(NOT ${TEST_ABS_TOL} STREQUAL "")
-  # Golds are generated with Linux GCC 8.4.0
-  if(${CMAKE_SYSTEM_NAME} MATCHES "Linux"
-     AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"
-     AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_GREATER_EQUAL 8.0
-     AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 9.0)
-    set(ABS_TOLERANCE "1.0e-15")
-  else()
-    set(ABS_TOLERANCE 0.05) # Otherwise set some useless default
-  endif()
-endif()
-
-if(NOT ${TEST_REL_TOL} STREQUAL "")
-  set(REL_TOLERANCE ${TEST_REL_TOL}) # User defined
-else(NOT ${TEST_REL_TOL} STREQUAL "")
-  # Golds are generated with Linux GCC 8.4.0
-  if(${CMAKE_SYSTEM_NAME} MATCHES "Linux"
-      AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU"
-      AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_GREATER_EQUAL 8.0
-      AND ${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 9.0)
-    set(REL_TOLERANCE "1.0e-13")
-  else()
-    set(REL_TOLERANCE "1.0e-7")
-  endif()
-endif()
-message(STATUS "Using test tolerance: abs = ${ABS_TOLERANCE}; rel = ${REL_TOLERANCE}")
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/CTestCustom.cmake ${CMAKE_BINARY_DIR}/CTestCustom.cmake)
 
