--- a/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder.yaml
+++ b/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder.yaml
@@ -27,7 +27,8 @@ linear_solvers:
 realms:
 
   - name: realm_1
-    mesh: rst/oversetRotCylinder.rst
+    mesh: ../../mesh/oversetCylinder.g
+    automatic_decomposition_type: rcb
     use_edges: yes
     activate_aura: true
 
@@ -54,7 +55,7 @@ realms:
           - Unspecified-3-HEX
         value:
           pressure: 0.0
-          velocity: [1.0,0.0,0.0]
+          velocity: [0.0,0.0,0.0]
 
     material_properties:
       target_name:
@@ -71,10 +72,10 @@ realms:
 
     boundary_conditions:
 
-    - inflow_boundary_condition: bc_1
+    - open_boundary_condition: bc_1
       target_name: inlet
-      inflow_user_data:
-        velocity: [1.0,0.0,0.0]
+      open_user_data:
+        velocity: [0.0,0.0,0.0]
         pressure: 0.0
 
     - open_boundary_condition: bc_2
@@ -83,21 +84,18 @@ realms:
         pressure: 0.0
         velocity: [0.0,0.0,0.0]
 
-    - symmetry_boundary_condition: bc_3
+    - open_boundary_condition: bc_3
       target_name: top
-      symmetry_user_data:
+      open_user_data:
 
-    - symmetry_boundary_condition: bc_4
+    - open_boundary_condition: bc_4
       target_name: bottom
-      symmetry_user_data:
+      open_user_data:
 
     - wall_boundary_condition: bc_5
       target_name: wall
       wall_user_data:
-        user_function_name:
-         velocity: wind_energy
-        user_function_string_parameters:
-         velocity: [interior]
+        velocity: [0.0, 0.0, 0.0]
 
     - symmetry_boundary_condition: bc_6
       target_name: side11
@@ -118,6 +116,7 @@ realms:
     - overset_boundary_condition: bc_overset
       overset_connectivity_type: tioga
       overset_user_data:
+        tioga_populate_inactive_part: false
         tioga_options:
           symmetry_direction: 2
           set_resolutions: no
@@ -135,11 +134,19 @@ realms:
         mesh_parts: [ Unspecified-2-HEX ]
         motion:
          - type: rotation
-           omega: 6.00
+           omega: 24.00
            axis: [0.0, 1.0, 0.0]
+           origin: [5.0, 0.0, 0.0]
 
     solution_options:
       name: myOptions
+
+      fix_pressure_at_node:
+        value: 0.0
+        node_lookup_type: spatial_location
+        location: [-5.0, 0.05, -5.0]
+        search_target_part: [Unspecified-3-HEX]
+        search_method: stk_kdtree
 
       reduced_sens_cvfem_poisson: yes
 
@@ -160,7 +167,7 @@ realms:
 
       - type: surface
         physics: surface_force_and_moment
-        output_file_name: oversetRotCylinder_rst.dat
+        output_file_name: oversetMovingCylinder_rst.dat
         frequency: 1
         parameters: [0,0]
         target_name: wall
@@ -175,13 +182,13 @@ realms:
           compute_vorticity: yes
 
     restart:
-      restart_data_base_name: rst/oversetRotCylinder_rst.rst
-      restart_frequency: 100
-      restart_start: 100
+      restart_data_base_name: rst/oversetMovingCylinder.rst
+      restart_frequency: 15
+      restart_start: 15
 
     output:
-      output_data_base_name: out/oversetRotCylinder_rst.exo
-      output_frequency: 1000
+      output_data_base_name: out/oversetMovingCylinder.exo
+      output_frequency: 1
       output_node_set: no
       output_variables:
        - velocity
