--- a/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder_rst.yaml
+++ b/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder_rst.yaml
@@ -27,9 +27,8 @@ linear_solvers:
 realms:
 
   - name: realm_1
-    mesh: ../../mesh/oversetCylinder.g
+    mesh: rst/oversetMovingCylinder.rst
     use_edges: yes
-    automatic_decomposition_type: rcb
     activate_aura: true
 
     equation_systems:
@@ -72,10 +71,10 @@ realms:
 
     boundary_conditions:
 
-    - inflow_boundary_condition: bc_1
+    - open_boundary_condition: bc_1
       target_name: inlet
-      inflow_user_data:
-        velocity: [1.0,0.0,0.0]
+      open_user_data:
+        velocity: [0.0,0.0,0.0]
         pressure: 0.0
 
     - open_boundary_condition: bc_2
@@ -84,13 +83,13 @@ realms:
         pressure: 0.0
         velocity: [0.0,0.0,0.0]
 
-    - symmetry_boundary_condition: bc_3
+    - open_boundary_condition: bc_3
       target_name: top
-      symmetry_user_data:
+      open_user_data:
 
-    - symmetry_boundary_condition: bc_4
+    - open_boundary_condition: bc_4
       target_name: bottom
-      symmetry_user_data:
+      open_user_data:
 
     - wall_boundary_condition: bc_5
       target_name: wall
@@ -100,9 +99,9 @@ realms:
         user_function_string_parameters:
          velocity: [interior]
 
-    - symmetry_boundary_condition: bc_6
+    - open_boundary_condition: bc_6
       target_name: side11
-      symmetry_user_data:
+      open_user_data:
 
     - symmetry_boundary_condition: bc_7
       target_name: side12
@@ -119,6 +118,7 @@ realms:
     - overset_boundary_condition: bc_overset
       overset_connectivity_type: tioga
       overset_user_data:
+        tioga_populate_inactive_part: false
         tioga_options:
           symmetry_direction: 2
           set_resolutions: no
@@ -136,11 +136,19 @@ realms:
         mesh_parts: [ Unspecified-2-HEX ]
         motion:
          - type: rotation
-           omega: 6.00
+           omega: 24.00
            axis: [0.0, 1.0, 0.0]
+           origin: [5.0, 0.0, 0.0]
 
     solution_options:
       name: myOptions
+
+      fix_pressure_at_node:
+        value: 0.0
+        node_lookup_type: spatial_location
+        location: [-5.0, 0.0, -5.0]
+        search_target_part: [Unspecified-3-HEX]
+        search_method: stk_kdtree
 
       reduced_sens_cvfem_poisson: yes
 
@@ -161,7 +169,7 @@ realms:
 
       - type: surface
         physics: surface_force_and_moment
-        output_file_name: oversetRotCylinder.dat
+        output_file_name: oversetMovingCylinder.dat
         frequency: 1
         parameters: [0,0]
         target_name: wall
@@ -176,13 +184,13 @@ realms:
           compute_vorticity: yes
 
     restart:
-      restart_data_base_name: rst/oversetRotCylinder.rst
-      restart_frequency: 100
+      restart_data_base_name: rst/oversetMovingCylinder.rst
+      restart_frequency: 15
       restart_start: 100
 
     output:
-      output_data_base_name: out/oversetRotCylinder.exo
-      output_frequency: 1000
+      output_data_base_name: out/oversetMovingCylinder.exo
+      output_frequency: 1
       output_node_set: no
       output_variables:
        - velocity
@@ -199,7 +207,7 @@ Time_Integrators:
   - StandardTimeIntegrator:
       name: ti_1
       start_time: 0
-      termination_step_count: 15
+      termination_step_count: 30
       time_step: 0.003
       time_stepping_type: fixed
       time_step_count: 0
