--- a/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder.yaml
+++ b/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder.yaml
@@ -13,6 +13,7 @@ linear_solvers:
     kspace: 50
     output_level: 0
 
+  # TODO -TPETRA Solver is failing with this test
   #- name: solve_cont
   #  type: tpetra
   #  method: gmres
@@ -43,7 +44,10 @@ realms:
 
     equation_systems:
       name: theEqSys
+      # 3 iterations still causes pressure discontinuity at overset boundary
+      # 5 iterations is better
       max_iterations: 3
+      decoupled_overset_solve: yes
 
       solver_system_specification:
         velocity: solve_scalar
@@ -201,7 +205,7 @@ realms:
 
     output:
       output_data_base_name: out/oversetMovingCylinder.exo
-      output_frequency: 1
+      output_frequency: 1000
       output_node_set: no
       output_variables:
        - velocity
