--- a/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder_rst.yaml
+++ b/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder_rst.yaml
@@ -42,6 +42,9 @@ realms:
     equation_systems:
       name: theEqSys
       max_iterations: 3
+      # TODO: restart fails for coupled overset on start of second timestep
+      # stk connectivity/GID issue
+      decoupled_overset_solve: yes
 
       solver_system_specification:
         velocity: solve_scalar
@@ -199,8 +202,8 @@ realms:
       restart_time: 100
 
     output:
-      output_data_base_name: out/oversetMovingCylinder_rst.exo
-      output_frequency: 1
+      output_data_base_name: out/oversetMovingCylinder.e-s.1
+      output_frequency: 1000
       output_node_set: no
       output_variables:
        - velocity
